--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,28 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-migration:9092,PLAINTEXT_HOST://localhost:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    command: sh -c "((sleep 15 && kafka-topics --create --zookeeper zookeeper:2181 --replication-factor 1 --partitions 3 --topic quick-starter)&) && /etc/confluent/docker/run ">
+    command: sh -c "((sleep 15 && kafka-topics --create --zookeeper zookeeper:2181 --replication-factor 1 --partitions 3 --topic rick-and-morty-migration)&) && /etc/confluent/docker/run"
+
+  migration-producer:
+    build: producer/.
+    environment:
+      - "RICK_AND_MORTY_URL=${RICK_AND_MORTY_URL}"
+      - "KAFKA_TOPIC=${KAFKA_TOPIC}"
+      - "KAFKA_BROKERS=${KAFKA_BROKERS}"
+    ports:
+      - "8080:8080"
+    expose:
+      - 8080
+    container_name: migration-producer
+    depends_on:
+      - zookeeper
+      - kafka
+    networks:
+      - data-migration
 
 networks:
   data-migration:
